bug fixes, starting cards face down, images still not showing though

--- a/src/index.css
+++ b/src/index.css
@@ -33,40 +33,20 @@ h1{
 }
 
 .card{
-  background-color: white;
+  background-color: gray;
   display: flex;
   justify-content: center;
   align-items: center;
   border: solid 5px blue;
   transform: rotateY(180deg);
-  animation: 1s showImage linear;
-  transition: transform 1s;
-}
-
-@keyframes showImage{
-  0%, 70%{
-    transform: rotateY(0);
-  }
-  100%{
-    transform: rotateY(180deg);
-  }
+  transition: transform .5s;
 }
 
 .card img{
   max-width: 70%;
   max-height: 70%;
   transform: scale(0);
-  animation: 1s showCard linear;
-  transition: transform 1s;
-}
-
-@keyframes showCard{
-  0%, 70%{
-    transform: scale(1);
-  }
-  100%{
-    transform: scale(0);
-  }
+  transition: transform .5s;
 }
 
 .card.active{
